--- a/ProjectOne/ProjectOne/Main.storyboard
+++ b/ProjectOne/ProjectOne/Main.storyboard
@@ -171,16 +171,20 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FMX-CH-UE9">
-                                <rect key="frame" x="260" y="480" width="81" height="30"/>
-                                <state key="normal" title="Put on Hold"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="loJ-zE-frB">
+                                <rect key="frame" x="256" y="473" width="88" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Adopt Me"/>
+                                <connections>
+                                    <segue destination="v6L-fk-QMl" kind="show" id="vTP-3p-dNV"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="HjE-hs-zrA" firstAttribute="leading" secondItem="ohm-YM-lzs" secondAttribute="leading" id="55a-0z-AX6"/>
-                            <constraint firstItem="oTO-46-aDb" firstAttribute="top" secondItem="FMX-CH-UE9" secondAttribute="bottom" constant="41" id="6kB-FU-psb"/>
-                            <constraint firstItem="FMX-CH-UE9" firstAttribute="centerX" secondItem="Gmd-M8-ZX5" secondAttribute="centerX" id="Ezy-IL-Kgc"/>
+                            <constraint firstItem="loJ-zE-frB" firstAttribute="centerX" secondItem="Gmd-M8-ZX5" secondAttribute="centerX" id="AN1-MP-FiA"/>
+                            <constraint firstItem="loJ-zE-frB" firstAttribute="top" secondItem="Gmd-M8-ZX5" secondAttribute="bottom" constant="39" id="HWV-cm-put"/>
                             <constraint firstItem="Gmd-M8-ZX5" firstAttribute="top" secondItem="VLO-E9-3bh" secondAttribute="bottom" constant="8" symbolic="YES" id="HXQ-Xo-Z5U"/>
                             <constraint firstItem="ohm-YM-lzs" firstAttribute="top" secondItem="HjE-hs-zrA" secondAttribute="bottom" constant="8" symbolic="YES" id="Ig2-76-K6w"/>
                             <constraint firstItem="VLO-E9-3bh" firstAttribute="top" secondItem="ohm-YM-lzs" secondAttribute="bottom" constant="8" symbolic="YES" id="Lms-Eh-uo1"/>
@@ -260,9 +264,13 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hzg-6D-TuV">
-                                <rect key="frame" x="260" y="483" width="81" height="30"/>
-                                <state key="normal" title="Put on Hold"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8sU-kW-pxX">
+                                <rect key="frame" x="256" y="473" width="88" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Adopt Me"/>
+                                <connections>
+                                    <segue destination="v6L-fk-QMl" kind="show" id="3el-8j-Ull"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -274,14 +282,14 @@
                             <constraint firstItem="Bqi-ZM-M51" firstAttribute="top" secondItem="zM2-92-q30" secondAttribute="bottom" constant="8" symbolic="YES" id="905-e9-4Ti"/>
                             <constraint firstItem="Lbp-Mj-JXA" firstAttribute="leading" secondItem="fuO-WK-P24" secondAttribute="leading" id="9qR-zH-pvV"/>
                             <constraint firstItem="dmq-tG-uYR" firstAttribute="top" secondItem="fuO-WK-P24" secondAttribute="bottom" constant="8" symbolic="YES" id="BZZ-kY-57C"/>
-                            <constraint firstItem="Hzg-6D-TuV" firstAttribute="centerX" secondItem="Bqi-ZM-M51" secondAttribute="centerX" id="MWH-oO-odz"/>
-                            <constraint firstItem="XCV-Pi-QgZ" firstAttribute="top" secondItem="Hzg-6D-TuV" secondAttribute="bottom" constant="38" id="Q9I-AD-gI0"/>
+                            <constraint firstItem="8sU-kW-pxX" firstAttribute="centerX" secondItem="Bqi-ZM-M51" secondAttribute="centerX" id="JLJ-hG-BzT"/>
                             <constraint firstItem="Lbp-Mj-JXA" firstAttribute="trailing" secondItem="fuO-WK-P24" secondAttribute="trailing" id="aPk-xj-BjH"/>
                             <constraint firstItem="Lbp-Mj-JXA" firstAttribute="centerX" secondItem="tQd-k3-XBr" secondAttribute="centerX" id="f0q-kB-b5m"/>
                             <constraint firstItem="zM2-92-q30" firstAttribute="top" secondItem="dmq-tG-uYR" secondAttribute="bottom" constant="8" symbolic="YES" id="fZK-Ki-8QP"/>
                             <constraint firstItem="Bqi-ZM-M51" firstAttribute="leading" secondItem="zM2-92-q30" secondAttribute="leading" id="gYQ-iC-MSh"/>
                             <constraint firstItem="XCV-Pi-QgZ" firstAttribute="top" secondItem="zM2-92-q30" secondAttribute="bottom" constant="149" id="hxB-Jp-Tua"/>
                             <constraint firstItem="dmq-tG-uYR" firstAttribute="trailing" secondItem="fuO-WK-P24" secondAttribute="trailing" id="lge-tj-dEF"/>
+                            <constraint firstItem="8sU-kW-pxX" firstAttribute="top" secondItem="Bqi-ZM-M51" secondAttribute="bottom" constant="42" id="s9i-Ux-S4h"/>
                             <constraint firstItem="dmq-tG-uYR" firstAttribute="leading" secondItem="zM2-92-q30" secondAttribute="leading" id="uoa-UW-E7D"/>
                             <constraint firstItem="fuO-WK-P24" firstAttribute="top" secondItem="Lbp-Mj-JXA" secondAttribute="bottom" constant="8" symbolic="YES" id="xCf-ey-EoA"/>
                             <constraint firstItem="fuO-WK-P24" firstAttribute="leading" secondItem="dmq-tG-uYR" secondAttribute="leading" id="xwb-XX-Kkb"/>
@@ -298,6 +306,32 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AVI-Mb-gVK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2240" y="359"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="ajz-qS-Fjo">
+            <objects>
+                <viewController id="v6L-fk-QMl" customClass="MapViewController" customModule="ProjectOne" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9JI-6t-JND"/>
+                        <viewControllerLayoutGuide type="bottom" id="vis-A1-1f3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SRx-px-0Jp">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Zng-6h-oj2">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="Zng-6h-oj2" id="gRf-zZ-Gnk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hEV-fB-L5i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2926" y="129"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -465,9 +499,13 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PXS-cc-oEt">
-                                <rect key="frame" x="260" y="475" width="81" height="30"/>
-                                <state key="normal" title="Put on Hold"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0pS-Fm-DDm">
+                                <rect key="frame" x="256" y="471" width="88" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Adopt Me"/>
+                                <connections>
+                                    <segue destination="v6L-fk-QMl" kind="show" id="wth-h4-ZAR"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -476,8 +514,8 @@
                             <constraint firstItem="Roa-Nh-3OM" firstAttribute="trailing" secondItem="oOi-9R-yX6" secondAttribute="trailing" id="7yS-Io-w3H"/>
                             <constraint firstItem="n6d-TE-GSr" firstAttribute="leading" secondItem="q9i-yE-9e5" secondAttribute="leading" id="92g-Hf-gfj"/>
                             <constraint firstItem="q9i-yE-9e5" firstAttribute="top" secondItem="Roa-Nh-3OM" secondAttribute="bottom" constant="8" id="AM4-Gd-8hU"/>
-                            <constraint firstItem="PXS-cc-oEt" firstAttribute="centerX" secondItem="n6d-TE-GSr" secondAttribute="centerX" id="Ad3-sT-sqJ"/>
                             <constraint firstItem="q9i-yE-9e5" firstAttribute="leading" secondItem="Roa-Nh-3OM" secondAttribute="leading" id="DRa-am-tiY"/>
+                            <constraint firstItem="0pS-Fm-DDm" firstAttribute="centerX" secondItem="n6d-TE-GSr" secondAttribute="centerX" id="Fu4-1C-8pJ"/>
                             <constraint firstItem="Uwa-AP-Dcd" firstAttribute="top" secondItem="EsN-Ij-C7E" secondAttribute="bottom" constant="30" id="JFD-ei-DZe"/>
                             <constraint firstItem="6HE-TM-CXS" firstAttribute="top" secondItem="n6d-TE-GSr" secondAttribute="bottom" constant="120" id="KZC-bt-5u3"/>
                             <constraint firstItem="q9i-yE-9e5" firstAttribute="trailing" secondItem="Roa-Nh-3OM" secondAttribute="trailing" id="RKT-dB-NEV"/>
@@ -487,10 +525,10 @@
                             <constraint firstItem="n6d-TE-GSr" firstAttribute="top" secondItem="q9i-yE-9e5" secondAttribute="bottom" constant="8" symbolic="YES" id="icH-no-V1Z"/>
                             <constraint firstItem="oOi-9R-yX6" firstAttribute="top" secondItem="Uwa-AP-Dcd" secondAttribute="bottom" constant="8" id="iem-ED-W0t"/>
                             <constraint firstItem="Roa-Nh-3OM" firstAttribute="top" secondItem="oOi-9R-yX6" secondAttribute="bottom" constant="8" symbolic="YES" id="qBA-k5-igL"/>
+                            <constraint firstItem="0pS-Fm-DDm" firstAttribute="top" secondItem="n6d-TE-GSr" secondAttribute="bottom" constant="40" id="sZK-Qu-ivR"/>
                             <constraint firstItem="Uwa-AP-Dcd" firstAttribute="leading" secondItem="oOi-9R-yX6" secondAttribute="leading" id="tQ5-nt-KbG"/>
                             <constraint firstItem="6HE-TM-CXS" firstAttribute="top" secondItem="oOi-9R-yX6" secondAttribute="bottom" constant="207" id="taI-2D-nDL"/>
                             <constraint firstItem="Uwa-AP-Dcd" firstAttribute="centerX" secondItem="oOi-9R-yX6" secondAttribute="centerX" id="wdS-qe-liI"/>
-                            <constraint firstItem="PXS-cc-oEt" firstAttribute="top" secondItem="n6d-TE-GSr" secondAttribute="bottom" constant="44" id="zbX-pG-wB0"/>
                         </constraints>
                     </view>
                     <connections>
@@ -549,4 +587,7 @@
         <image name="bunny" width="16" height="16"/>
         <image name="fish" width="25" height="25"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="3el-8j-Ull"/>
+    </inferredMetricsTieBreakers>
 </document>
