--- a/Project3/app/src/main/res/values/colors.xml
+++ b/Project3/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#1b1b1b</color>
     <color name="colorPrimaryDark">#ffffff</color>
-    <color name="colorAccent">#4096ff</color>
+    <color name="colorAccent">#415773</color>
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
