--- a/Lab10_2/app/src/main/res/layout/activity_main.xml
+++ b/Lab10_2/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,20 +7,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jessie.lab10.MainActivity">
-
+    tools:context="jessie.lab10_2.MainActivity">
 
     <fragment
-        android:layout_width="0dp"
-        android:layout_weight="2"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/universe_frag"
-        class="jessie.lab10.ListFragment" />
+        class="jessie.lab10_2.UniverseListFragment" />
 
     <fragment
         android:layout_width="0dp"
-        android:layout_weight="3"
         android:layout_height="match_parent"
         android:id="@+id/detail_frag"
-        class="jessie.lab10.DetailFragment" />
-</RelativeLayout>
+        class="jessie.lab10_2.HeroDetailFragment" />
+</FrameLayout>
