--- a/Lab10_2/app/src/main/res/layout/fragment_universe_list.xml
+++ b/Lab10_2/app/src/main/res/layout/fragment_universe_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jessie.lab10.ListFragment">
+    tools:context="jessie.lab10_2.UniverseListFragment">
 
     <ImageView
         android:layout_width="175dp"
@@ -16,4 +16,5 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:id="@+id/listView" />
+
 </FrameLayout>
