--- a/Project3/app/src/main/res/layout/content_main.xml
+++ b/Project3/app/src/main/res/layout/content_main.xml
@@ -20,6 +20,7 @@
         android:background="@color/black"
         android:id="@+id/imageButton"
         android:src="@drawable/btn"
+        android:onClick="call"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
