--- a/Lab9/app/src/main/res/layout/activity_main.xml
+++ b/Lab9/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="jessie.lab9.MainActivity"
     android:orientation="vertical">
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="fitCenter"
         android:id="@+id/imageView"
-        android:src="@drawable/sleep"
-        android:contentDescription="@string/run" />
+        android:src="@drawable/main"
+        android:layout_gravity="center_horizontal" />
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:entries="@array/meals"
-        android:layout_gravity="center_horizontal" />
-
+        android:entries="@array/animal_types"/>
 </LinearLayout>
