--- a/Lab9/app/src/main/res/layout/activity_cat.xml
+++ b/Lab9/app/src/main/res/layout/activity_cat.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jessie.lab9.PupActivity"
+    tools:context="jessie.lab9.CatActivity"
     android:orientation="vertical">
 
 
@@ -15,13 +15,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/pup_name"
+        android:id="@+id/cat_name"
         android:layout_gravity="center_horizontal" />
 
     <ImageView
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:scaleType="fitCenter"
-        android:id="@+id/pupView"
+        android:id="@+id/catView"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
