added app icons

--- a/Lab10/app/src/main/res/layout-sw400dp/activity_main.xml
+++ b/Lab10/app/src/main/res/layout-sw400dp/activity_main.xml
@@ -17,14 +17,14 @@
         android:id="@+id/universe_frag"
         class="com.example.aileen.superheroes.UniverseListFragment" />
 
-<!--    <FrameLayout
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_weight="3"
         android:layout_height="match_parent"
         android:id="@+id/fragment_container"/>
 
 
-    <fragment
+    <!--    <fragment
             android:layout_width="0dp"
             android:layout_weight="3"
             android:layout_height="match_parent"
