--- a/Project3/app/src/main/res/layout/content_main.xml
+++ b/Project3/app/src/main/res/layout/content_main.xml
@@ -11,27 +11,46 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="jessie.project3.MainActivity"
     tools:showIn="@layout/app_bar_main"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:screenOrientation="portrait"
+    android:keepScreenOn="true">
 
-    <ImageButton
-        android:layout_width="500sp"
-        android:layout_height="500sp"
-        android:scaleType="fitXY"
-        android:background="@color/black"
-        android:id="@+id/imageButton"
-        android:src="@drawable/btn"
-        android:onClick="call"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:textColor="@color/white"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/schoolText"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+
+    <ImageButton
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="@android:color/transparent"
+        android:id="@+id/fadeButton"
+        android:scaleType="fitCenter"
+        android:src="@drawable/fade"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="fade" />
+
+    <ImageButton
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="@android:color/transparent"
+        android:id="@+id/callBtn"
+        android:scaleType="fitCenter"
+        android:src="@drawable/btn"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="callbtn" />
+
+
 
 
 </RelativeLayout>
